<resources xmlns:xgliff="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Dyslexia Awareness Quizz</string>
    <string name="banner_text_description">разбери ме. помогни ми. научи ме.</string>
    <string name="dyslexia_intro">Дислексията НЕ Е заболяване и НЕ Е увреждане. Хората с дислексия имат различно възприятие, те опознават света около себе си по различен начин.
    Децата с дислексия се учат да пишат, четат или смятат като всяко друго дете - чрез упражнения, просто процесът е специфичен спрямо нуждите им.</string>
    <string name="dyslexia_what_is_button">дислексия</string>
    <string name="make_test_button">тест</string>
    <string name="dyscalculia_what_is_button">дискалкулия</string>
    <string name="dysgraphia_what_is_button">дисграфия</string>
    <string name="list_of_professionals_button">списък на специалисти по градове</string>
    <string name="additional_info_button">допълнителна информация и ресурси</string>
    <string name="list_description"><xliff:g example="sitename" id="siteName"><b><a href="http://www.logopedia.bg">Логопедия.БГ</a></b></xliff:g> предлага на потребителите си списък със специалисти в България, към които можете да се обърнете при нужда от консултация. </string>
    <string name="list_title">намери специалист</string>
    <string name="list_of_all">Списък на всички регистрирани специалисти подредени по азбучен ред според града, в който практикуват, можете да откриете тук:</string>
    <string name="filter_by_city">Филтриране по градове можете да направите като изпишете името на града в търсачката, която се намира тук:</string>
    <string name="full_list_button">пълен списък</string>
    <string name="search_button">използвай търсачката</string>
    <string name="disclaimer">Забележка: Създателите на апликацията не са свързани по никакъв начин със собствениците на Логопедия.БГ и не отговарят за съдържанието на сайта или актуалността му, както не твърдят, че приемат идеите и мненията на собствениците на Логопедия.БГ.</string>
    <string name="dyslexia_header">специфично разтройство на четенето</string>
    <string name="dyslexia_what_is_01">Основният признак е специфично и значимо нарушение в развитието на уменията за четене, което не може да бъде обяснено с умствената възраст на детето, с проблеми в остротата на зрението или с неадекватно обучение в училище.</string>
    <string name="dyslexia_what_is_02">Могат да са засегнати уменията за разбиране на прочетеното, уменията за разпознаване на прочетените думи, уменията за четене на глас и изпълнението на задачи, изискващи четене. Често се придружава от затруднения в правописа.</string>
    <string name="dyslexia_what_is_03">Децата със специфични разстройства на четенето имат в анамнезата си данни за специфични разстройства в развитието на речта и езика. Често се наблюдават емоционални и поведенчески нарушения.</string>

    <string name="dyscalculia_header">специфично разтройство на аритметичните умения</string>
    <string name="dyscalculia_what_is_01">Дискалкулията обхваща специфично нарушение на аритметичните умения, което не може да бъде обяснено с умствено изоставане или неадекватно обучение в училище.</string>
    <string name="dyscalculia_what_is_02">Нарушението засяга предимно умението за извършване на основните аритметични действия, както и на по-абстракти такива, включително:</string>
    <string name="dyscalculia_what_is_list">
         <item>• събиране;</item>
         <item>\n• изваждане;</item>
         <item>\n• умножение и деление;</item>
         <item>\n• алгебра;</item>
         <item>\n• тригонометрия;</item>
         <item>\n• геометрия;</item>
         </string>


    <string name="dysgraphia_header">специфично разтройство на правописа</string>
    <string name="dysgraphia_what_is_01">Основният признак при това разстройство е специфично и значимо нарушение на развитието на уменията за правопис при липса на специфично разстройство на четенето, което не може да бъде обяснено с ниска умствена възраст на детето, с проблеми в остротата на зрението или с неадекватно обучение в училище. </string>
    <string name="dysgraphia_what_is_02">Дисграфията засяга както способността за произнасяне на буквите в думата, така и правилното изписване на думите.</string>
    <string name="dysgraphia_what_is_03">Дисграфията може да се прояви като:</string>

    <string name="dysgraphia_what_is_list">
         <item>• бавно писане;</item>
         <item>\n• неправилно изписване на буквите и цифрите;</item>
         <item>\n• много силен или много слаб натиск при писане;</item>
         <item>\n• много големи или много ситни графични знаци;</item>
         <item>\n• огледално писане;</item>
         <item>\n• много голям наклон;</item>
         <item>\n• нечетлив почерк;</item>
         <item>\n• затруднения в пространственото оформление на текста;</item>
         <item>\n• невъзможност да се следва реда;</item>
         </string>
    <string name="dyslexia_questions_intro">Въпросникът по-долу се отнася до начина, по който детето учи и преработва информация и е създаден в помощ на инедтефицирането на евентуален проблем.
        \n\nТова не е поставяне на диагноза!
        \n\nПри затруднения с ученето винаги се консултирайте с учителя
    и педиатъра на детето, за да се уверите, че проблемът не е в метода на преподаване или поради здравословни проблеми като нарушение на слуха или зрението.
       \n\nВинаги се консултирайте със специалист, който да
    направи по-задълбочен анализ вместо да поставяте сами диагноза!</string>
    <string name="child_name_form">Име на детето</string>
    <string name="name_disclaimer">Забележка: Името на детето се използва само за удобство при попълване на теста. НЕ запазваме или използваме имената по никакъв начин. Ако не желаете да използвате истински имена, това няма да повлияе на теста.</string>
    <string name="dyslexia_question_one">В ежедневието ___ е изключително буден и заинтересован:</string>
    <string name="dyslexia_question_two">___ е изцяло отдаден на игрите:</string>
    <string name="answer_directions_yes">Да</string>
    <string name="answer_directions_no">Не</string>
    <string name="questions">Въпроси</string>
    <string name="dyslexia_question_three"> ___ е разсеян, откъснат от действителността:</string>
    <string name="dyslexia_question_four">___ има особена или неестествена стойкта на тялото:</string>
    <string name="send_as_email_checkbox">Искам да изпратя резултата като имейл</string>
    <string name="add_resources_to_email_checkbox">Искам да добавя списък с ресурси в текста на имейла</string>
    <string name="get_score_button">Резултат</string>
    <string name="score_string">Резултат: %1$d</string>
    <string name="save_name_button">Запиши</string>
    <string name="child_name_hint">Име на Детето/Никнейм</string>
    <string name="dyslexia_question_one_update2">e изключително буден и заинтересован:</string>
    <string name="dyslexia_question_one_update1">В ежедневието</string>
    <string name="dyslexia_question_two_update2">е изцяло отдаден на игрите:</string>
    <string name="dyslexia_question_three_update2">е разсеян, откъснат от действителността:</string>
    <string name="dyslexia_question_four_update2">има особена или неестествена стойкта на тялото:</string>
    <string name="result_message">. При резултат по-висок от 5 ви съветваме да се консултирате със специалист, но не забравяйте да говорите и с учителя на детето.</string>
    <string name="additional_info_email"><a href="https://goo.gl/F2Q9xU">Какво е дислексията и как да я разпознаем?</a>\n<a href="https://goo.gl/sEFQm8">Стратегии за учене при децата с дислексия.</a>\nНе забравяйте, че този тест не е диагноза. Винаги се посъветвайте първо с учителя на детето, петиатър и логопед преди да приемате, че детето ви има дислексия. </string>

</resources>
