<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/container_dropshadow">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_24dp"
        android:orientation="vertical"

        >

        <TextView
            android:id="@+id/list_header"
            style="@style/Header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_24dp"
            android:text="@string/list_title" />

        <TextView
            style="@style/GenericText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_24dp"
            android:text="@string/list_description"

            />

        <TextView
            style="@style/GenericText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_of_all" />

        <Button
            style="@style/WhatIsButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_16dp"
            android:text="@string/full_list_button" />

        <TextView
            style="@style/GenericText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_by_city" />

        <Button
            style="@style/WhatIsButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_16dp"
            android:text="@string/search_button" />

        <TextView
            style="@style/GenericText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_32dp"
            android:text="@string/disclaimer" />

    </LinearLayout>
</ScrollView>