<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/container_dropshadow">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dimen_24dp"

        android:orientation="vertical">

        <TextView
            style="@style/Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_16dp"
            android:layout_weight="1"
            android:text="@string/dysgraphia_header" />

        <TextView
            style="@style/GenericText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_16dp"
            android:layout_weight="1"
            android:text="@string/dysgraphia_what_is_01" />

        <TextView
            style="@style/GenericText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_16dp"
            android:layout_weight="1"
            android:text="@string/dysgraphia_what_is_02" />

        <TextView
            style="@style/GenericText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dysgraphia_what_is_03" />

        <TextView
            style="@style/GenericText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_32dp"
            android:layout_weight="1"
            android:text="@string/dysgraphia_what_is_list" />

    </LinearLayout>

</ScrollView>